@@ -34,7 +34,7 @@ The "trick" to making this work for Module::Build is making sure the
 highest version Module::Build is used, whether this is in C<inc/> or
 already installed on the user's system.  This ensures that all necessary
 features are available as well as any new bug fixes.  This is done using
-the new L<inc::latest> module.
+the experimental L<inc::latest> module, available on CPAN.
 
 A "normal" Build.PL looks like this (with only the minimum required
 fields):
